<resources>
    <string name="app_name">EasyTax</string>
    <string name="Welcome">Welcome!</string>
    <string name="login">Login</string>
    <string name="title_activity_login">Login Activity</string>
    <string name="prompt_email">  Email</string>
    <string name="prompt_password">Passsword</string>
    <string name="prompt_confirm_password">Confirm passsword</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password not valid</string>
    <string name="login_failed">"Login failed"</string>
    <string name="selectTxt">Please Select A Form</string>
    <string name="cyberzen">CyberZen.</string>
    <string name="hello_there">Hello There!</string>
    <string name="need_help">Need Help?</string>
    <string name="powered_by">Powered by</string>
    <string name="family_tax_form">Family Tax Form</string>
    <string name="business_tax_form">Business Tax Form</string>
    <string name="personal_tax_form">Personal Tax Form</string>
    <string name="full_name">Full name</string>
    <string name="register">Register</string>

    <string name="personalTaxOneTitle">Personal Tax Form</string>
    <string name="_1_basic_peronsal_amount">1. Basic Peronsal Amount</string>
    <string name="_2_canada_caregiver_amount_for_infirm_children_under_age_18">2. Canada caregiver amount for infirm children under age 18</string>
    <string name="_3_age_amount">3. Age amount</string>
    <string name="_4_pension_income_amount">4. Pension income amount</string>
    <string name="save_as">Save </string>
    <string name="setting">Setting</string>
    <string name="report_a_bug">Help</string>
    <string name="easy_tax">Easy TAX</string>
    <string name="someone_gmail_com">Someone@gmail.com</string>

    <string name="txt_message">No Text Available</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="phone_hint">6475555555</string>
    <string name="registration">Registration</string>
    <string name="phone">Phone</string>
    <string name="googleSignInBtn">sign in with google</string>
    <string name="log_out">Log Out</string>
    <string name="change_text_size">Change Text Size</string>

    <string name="setting_color">Select background color:</string>
    <string name="setting_time">Select time format</string>
    <string name="color1">White</string>
    <string name="color2">Yellow</string>
    <string name="color3">LightGreen</string>
    <string name="timeFormat1">12 Hours</string>
    <string name="timeFormat2">24 Hours</string>
    <string name="setting_font">Select text size:</string>
    <string name="saveBt">Save</string>
    <string name="Switch">True / False</string>
    <string name="message">EasyTax</string>
    <string name="notification_title">EasyTax Detected</string>

    <string name="Saved_as">Saved</string>
    <string name="remember_me">Remember Me</string>
    <string name="help">Help</string>
    <string name="income">Income</string>
    <string name="deductions">Deductions</string>
    <string name="numogkids"># of Children under 18years</string>
    <string name="enter_yearly_profit">Enter Yearly Income</string>
    <string name="enter_charitable">Enter Charitable Donations</string>
    <string name="enter_tax_paid">Enter Tax Paid</string>
    <string name="enter_capital_gain">Enter Capital Gain</string>
    <string name="enter_rrsp">Enter RRSP</string>

    <string name="_2020_tax_form">2020 Tax Form</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="enter_yearly_income">Enter Yearly Income</string>
    <string name="enter_total_parent_s_income">Enter Total parent/s income</string>
    <string-array name="fontSize">
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>

</resources>