<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".MenuSetting">

    <TextView
        android:id="@+id/backgroundColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_color"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_margin="10dp"/>
    <RadioGroup
        android:id="@+id/colorGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color1" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color2" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color3" />

    </RadioGroup>

    <TextView
        android:id="@+id/fontID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_font"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_margin="10dp"/>
    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/fontSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"/>


    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saveBt"
        android:background="@drawable/button"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="#FF000000"
        android:layout_margin="30dp"/>


</androidx.appcompat.widget.LinearLayoutCompat>