<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Scroll">

    <TextView
        android:id="@+id/PersonalTaxIntro"
        android:layout_width="290dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="72dp"
        android:layout_marginTop="44dp"
        android:gravity="left"
        android:text="@string/personal_tax_form"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="298dp"
        android:layout_height="44dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="92dp"
        android:layout_marginTop="80dp"
        android:alpha="0.5"
        android:text="@string/_2020_tax_form"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/saveTaxRefund2"
        android:layout_width="160dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/button"
        android:clickable="true"
        android:text="@string/save"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/personalTaxRefund"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paidIncome2"
        app:layout_constraintVertical_bias="0.959" />

    <Button
        android:id="@+id/personalTaxRefund"
        android:layout_width="199dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="72dp"
        android:background="@drawable/button"
        android:clickable="true"
        android:text="@string/submit"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/yearlyIncome"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="20dp"
        android:background="@android:drawable/editbox_background_normal"
        android:ems="10"
        android:hint="@string/enter_yearly_income"
        android:inputType="numberDecimal"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/incomeTv" />

    <TextView
        android:id="@+id/deducttiontv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/deductions"
        android:textColor="@color/Green"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yearlyIncome2" />

    <TextView
        android:id="@+id/incomeTv"
        android:layout_width="85dp"
        android:layout_height="25dp"
        android:layout_above="@+id/yearlyIncome"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/income"
        android:textColor="@color/Green"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/paidIncome2"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/editbox_background_normal"
        android:ems="10"
        android:hint="@string/enter_tax_paid"
        android:inputType="numberDecimal"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paidIncome3" />

    <EditText
        android:id="@+id/paidIncome3"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="36dp"
        android:background="@android:drawable/editbox_background_normal"
        android:ems="10"
        android:hint="@string/enter_rrsp"
        android:inputType="numberDecimal"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deducttiontv" />

    <EditText
        android:id="@+id/yearlyIncome2"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/editbox_background_normal"
        android:ems="10"
        android:hint="@string/enter_capital_gain"
        android:inputType="numberDecimal"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yearlyIncome" />

    <TextView
        android:id="@+id/PowerBy"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="296dp"
        android:layout_marginBottom="28dp"
        android:fontFamily="@font/light"
        android:text="@string/powered_by"
        android:textColor="@color/grey"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Member"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/CyberZen"
        android:layout_width="99dp"
        android:layout_height="33dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/bold"
        android:text="@string/cyberzen"
        android:textColor="@color/red"

        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/PowerBy" />

</androidx.constraintlayout.widget.ConstraintLayout>